# onxp-d5-django-modular

./: .gitignore  .talismanrc  README.md  bun.lockb  dump.rdb  package.json  pyproject.toml  shell.nix
src/app_dashboard/: queries.py  urls.py  views.py
src/app_dashboard/migrations/: 0001_create_book_table.py  0002_pinjam_buku.py  0003_add_officer_column.py
src/app_dashboard/templates/app_dashboard/: index.html
src/app_landing/: urls.py  views.py
src/app_landing/static/app_landing/: style.css
src/app_landing/templates/app_landing/: about.html  index.html
src/app_login/: urls.py  views.py
src/app_login/static/app_login/: style.css
src/app_login/templates/app_login/: index.html
src/app_user_settings/: apps.py  urls.py  views.py
src/django_modular/: settings.py  urls.py
src/django_modular/templates/: index.html
src/templates/: template.html
