[project]
name = "belajar_django_modular"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Piscki Pratama", email = "pisckipratama@gmail.com"},
]
dependencies = [
    "django>=5.0.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
