[project]
name = "belajar_django_modular"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Piscki Pratama", email = "pisckipratama@gmail.com"},
]
dependencies = [
    "django==5.0.5",
    "django-environ==0.11.2",
    "psycopg-binary==3.1.19",
    "psycopg2-binary==2.9.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"
tw-watch = "bunx tailwindcss -i ./app.css -o ./src/app_landing/static/app_landing/tailwind.css --watch"